Oracle Java 7 needs more PermGen space